fix: fix css class for delete and restore icon on dark mode and light mode

--- a/sidepanel.css
+++ b/sidepanel.css
@@ -161,7 +161,7 @@ body {
   padding: 5px;
 }
 
-.delete-note-icon:hover, .restore-note-icon:hover {
+.delete-item-icon:hover, .restore-item-icon:hover {
   background-color: #ddd;
   border-radius: 50%;
 }
